2011-06-22  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.h (DW_OP_GNU_parameter_ref): Define.
	* src/dwarf2.c (adjust_location_list): Handle
	DW_OP_GNU_parameter_ref.

2011-05-11  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.h (DW_OP_GNU_const_type, DW_OP_GNU_regval_type,
	DW_OP_GNU_deref_type, DW_OP_GNU_convert, DW_OP_GNU_reinterpret):
	Define.
	* src/dwarf2.c (adjust_location_list): Handle DW_OP_GNU_const_type,
	DW_OP_GNU_retval_type, DW_OP_GNU_defer_type, DW_OP_GNU_convert and
	DW_OP_GNU_reinterpret.

2011-04-01  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.h (DW_TAG_GNU_template_template_param,
	DW_TAG_GNU_template_parameter_pack, DW_TAG_GNU_formal_parameter_pack,
	DW_TAG_GNU_call_site, DW_TAG_GNU_call_site_parameter,
	DW_AT_GNU_vector, DW_AT_GNU_guarded_by, DW_AT_GNU_pt_guarded_by,
	DW_AT_GNU_guarded, DW_AT_GNU_pt_guarded, DW_AT_GNU_locks_excluded,
	DW_AT_GNU_exclusive_locks_required, DW_AT_GNU_shared_locks_required,
	DW_AT_GNU_odr_signature, DW_AT_GNU_template_name,
	DW_AT_GNU_call_site_value, DW_AT_GNU_call_site_data_value,
	DW_AT_GNU_call_site_target, DW_AT_GNU_call_site_target_clobbered,
	DW_AT_GNU_tail_call, DW_AT_GNU_all_tail_call_sites,
	DW_AT_GNU_all_call_sites, DW_AT_GNU_all_source_call_sites,
	DW_OP_GNU_entry_value): Define.
	* src/dwarf2.c (adjust_location_list): Handle DW_OP_GNU_entry_value.
	(adjust_attributes): Handle DW_AT_GNU_call_site_value,
	DW_AT_GNU_call_site_data_value, DW_AT_GNU_call_site_target and
	DW_AT_GNU_call_site_target_clobbered.

2010-11-23  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.h (DW_OP_GNU_implicit_pointer): Define.
	* src/dwarf2.c (adjust_location_list): Add CU argument, fix
	handling of DW_OP_call_ref, handle DW_OP_GNU_implicit_pointer.
	(adjust_dwarf2_loc): Add CU argument, adjust adjust_location_list
	caller.
	(adjust_attributes): Adjust adjust_location_list and
	adjust_dwarf2_loc callers.
	(adjust_dwarf2_frame): Likewise.

2010-11-22  Jakub Jelinek  <jakub@redhat.com>
